2007-02-24  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-document-loader.c: refactor how the
	encoding is fetched from metadata.

=== gedit 2.17.5 ===

2007-02-12  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	gedit 2.17.5 released

2007-02-12  Paolo Borelli  <pborelli@katamail.com>

	* bindings/python/gedit.override:
	* bindings/python/gedit.defs:

	Bind GeditStatusbar, bug #401851 patch by P. Henrique Silva.

2007-02-12  Paolo Borelli  <pborelli@katamail.com>

	* plugins/modelines/modeline-parser.c: fix "indent-tabs-mode"
	in emacs modelines (cut&paste error in the python/C transition)

2007-02-06  Jesse van den Kieboom  <jesse@icecrew.nl>

	* plugins/filebrowser/gedit-file-bookmarks-store.c: changed "at" to 
	"on"

2007-02-06  Jesse van den Kieboom  <jesse@icecrew.nl>

	* plugins/filebrowser/gedit-file-bookmarks-store.c: disabled checking 
	if an uri exists for remote bookmarks. Added the hostname in the
	bookmark name for remote bookmarks

2007-02-06  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-document-loader.c: close file descriptor on
	a loading error. Bug #403140.

2007-02-06  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-print-job-preview.c: mark string for translation.
	Patch by Takao Fujiwara.

2007-01-27  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-commands-file.c: when raising an already
	open document, go to the line specified on the command
	line. Bug #401219.

2007-01-24  Steve Frécinaux  <code@istique.net>

	* plugins/modelines/modeline-parser.c: fix handling of the very last
	line if the document is smaller than ten lines (it wasn't parsed).

2007-01-23  Steve Frécinaux  <code@istique.net>

	* plugins/modelines/modeline-parser.c: fix handling of the very last
	line (it wasn't parsed).

=== gedit 2.17.4 ===

2007-01-22  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	gedit 2.17.4 released

2007-01-19  Steve Frécinaux  <code@istique.net>
